compiler/tests/fixtures/invalid/semantics/role_min_greater_than_max.viv
// Role with min > max — should be rejected

action bad-slots:
    roles:
        @actor:
            as: initiator
        @crowd*:
            as: bystander
            n: 5-3
